<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navdrawer.PrivacyPolicyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

<!--                <include-->
<!--                    android:id="@+id/include"-->
<!--                    layout="@layout/app_bar_home_acticity" />-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="80sp"
                    android:orientation="vertical"
                    android:paddingBottom="3sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:text="We are committed to protecting the privacy of our members and their transactions. The following section explains what information we collect, how we use and protect your information in safe and secure manner."
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="Information We Collect"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/information_we_collect"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="Use of Member's Personal Data and Other Information"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/personal_data_and_other_information"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/personal_data_disclosure"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="Subsidiaries"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="We may share your personal data with our subsidiaries for purpose consistent with this privacy policy."
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="Agents and Consultants"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/agents_and_consultants"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="Legal Requirements"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/leagal_requirements"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="Exclusions"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/exclusions"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="Security"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/security"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15sp"
                        android:text="Changes to CareerSocially's Privacy Policy"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5sp"
                        android:text="@string/change_rights"
                        android:textColor="@color/colorPrimary"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>