<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.navdrawer.AboutUsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:background="@drawable/bg_splash"
                    android:orientation="vertical"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark">

<!--                    <LinearLayout-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginTop="10sp"-->
<!--                        android:gravity="center_vertical"-->
<!--                        android:orientation="horizontal"-->
<!--                        android:paddingStart="10sp">-->

<!--                        <ImageButton-->
<!--                            android:id="@+id/back_button"-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:background="@null"-->
<!--                            android:src="@drawable/ic_back" />-->

<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:layout_height="wrap_content"-->
<!--                            android:layout_marginLeft="10sp"-->
<!--                            android:gravity="center_vertical"-->
<!--                            android:text="About Us"-->
<!--                            android:textColor="@color/colorWhite"-->
<!--                            android:textSize="17dp" />-->

<!--                    </LinearLayout>-->


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="40sp"
                        android:layout_marginTop="40sp">


                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="100dp"
                            android:layout_height="80dp"
                            android:contentDescription="@string/nav_header_desc"
                            android:focusedByDefault="true"
                            android:scaleType="centerCrop"
                            app:srcCompat="@drawable/cslogo" />


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingLeft="20sp"
                            android:paddingRight="40sp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Cs Connect"
                                android:textColor="@color/colorAccent"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5sp"
                                android:text="Real Estate Plateform By CareerSocially"
                                android:textColor="@android:color/white"
                                android:textSize="13sp" />


                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/about_us_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="20sp"
                    android:text="@string/about_us"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="20sp"
                    android:text="@string/about_us_2"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginBottom="80sp"
                    android:text="@string/about_us_3"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp" />


            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>